--- a/module_4/bai_tap/src/main/java/ss5/excercisee/exercise1/src/main/webapp/WEB-INF/views/product/list.html
+++ b/module_4/bai_tap/src/main/java/ss5/excercisee/exercise1/src/main/webapp/WEB-INF/views/product/list.html
@@ -9,12 +9,14 @@
 </head>
 <body>
 <p><a th:href="@{/product/add}">Add</a></p>
-<!--<form action="" >-->
-<!--    <input type="text" th:field="name">-->
-<!--    <input type="submit" value="Search">-->
-<!--</form>-->
-<table class="table table-dark table-striped">
 
+<table class="table table-dark table-striped">
+    <form action="/product/search" method="get" >
+        <span class="d-flex">
+            <input type="text" placeholder="Search Name" name="nameSearch" th:value="${nameSearch}" aria-label="Search">
+        <button type="submit">Search</button>
+             </span>
+    </form>
     <tr>
         <th>id</th>
         <th>name</th>
