ss7 srping boot

--- a/module_4/bai_tap/src/main/java/ss4/exercise/exercise1/src/main/webapp/WEB-INF/views/product/list.html
+++ b/module_4/bai_tap/src/main/java/ss4/exercise/exercise1/src/main/webapp/WEB-INF/views/product/list.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 <p><a th:href="@{/product/add}">Add</a></p>
-<table class="table table-striped">
+<!--<form action="" >-->
+<!--    <input type="text" th:field="name">-->
+<!--    <input type="submit" value="Search">-->
+<!--</form>-->
+<table class="table table-dark table-striped">
 
     <tr>
         <th>id</th>
