--- a/module_4/bai_tap/src/main/java/case_study/case_study/src/main/resources/templates/customer/list.html
+++ b/module_4/bai_tap/src/main/java/case_study/case_study/src/main/resources/templates/customer/list.html
@@ -10,12 +10,21 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<!--<div style="text-align: center">-->
-<!--    <th:block th:if="${message}">-->
-<!--        <p style="color: red;font-weight: bold" th:text="${message}"></p>-->
-<!--    </th:block>-->
-<!--</div>-->
+<div style="text-align: center">
+    <th:block th:if="${message}">
+        <p style="color: red;font-weight: bold" th:text="${message}"></p>
+    </th:block>
+</div>
 <div>
+    <form>
+        <input type="text" name="searchName "  th:value="${searchName}" placeholder="Search name">
+        <!--        <select name="customerType">-->
+        <!--            <option value="" selected>Type</option>-->
+        <!--            <option th:each="item: ${customerTypes}" th:value="${item.name}"-->
+        <!--                    th:text="${item.name}"></option>-->
+        <!--        </select>-->
+        <input type="submit" value="Search">
+    </form>
     <p><a href="/add">Add Customer</a></p>
 </div>
 <div class="body-mid">
@@ -47,65 +56,66 @@
                 <td th:text="${data.phoneNumber}"></td>
                 <td th:text="${data.email}"></td>
                 <td th:text="${data.address}"></td>
-                <td ></td>
-                <td ></td>
+                <td></td>
+                <td></td>
 
             </tr>
             </tbody>
         </table>
-<!--        <div class="modal fade " id="delete" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"-->
-<!--             style="color: white">-->
-<!--            <div class="modal-dialog ">-->
-<!--                <div class="modal-content bg-dark">-->
-<!--                    <div class="modal-header">-->
-<!--                        <h5 class="modal-title" id="exampleModalLabel">Delete</h5>-->
-<!--                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
-<!--                    </div>-->
-<!--                    <div class="modal-body">-->
-<!--                        Bạn có muốn xóa <strong class="text-danger" id="nameDelete"></strong>-->
-<!--                    </div>-->
-<!--                    <div class="modal-footer">-->
-<!--                        <form action="/customers/delete">-->
-<!--                            <input type="text" name="id" id="id" hidden>-->
-<!--                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>-->
-<!--                            <button class="btn btn-danger" type="submit">Delete</button>-->
-<!--                        </form>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div style="text-align: center">-->
-<!--            <a th:href="@{'/customers'(page=${customers.number - 1},nameSearch=${nameSearch},email=${email},customerType=${customerType})}"-->
-<!--               th:if="${customers.hasPrevious()}">-->
-<!--                <button type="button" class="btn btn-secondary">Previous</button>-->
-<!--            </a>-->
-<!--            <span th:text="${customers.number+1}"></span> / <span th:text="${customers.totalPages}"></span>-->
-<!--            <a th:href="@{'/customers'(page=${customers.number + 1},nameSearch=${nameSearch},email=${email},customerType=${customerType})}"-->
-<!--               th:if="${customers.hasNext()}">-->
-<!--                <button type="button" class="btn btn-secondary">Next</button>-->
-<!--            </a>-->
-<!--            <th:block th:if="${message}">-->
-<!--                <p style="text-align: center" th:text="${message}"></p>-->
-<!--            </th:block>-->
-<!--        </div>-->
-<!--        <div style="text-align: center">-->
-<!--            <a th:href="@{'/customer'(page=${customers.number - 1},nameSearch=${nameSearch},email=${email},customerType=${customerType})}"-->
-<!--               th:if="${customers.hasPrevious()}">-->
-<!--                <button type="button" class="btn btn-secondary">Previous</button>-->
-<!--            </a>-->
-<!--            <span th:text="${customers.number+1}"></span> / <span th:text="${customers.totalPages}"></span>-->
-<!--            <a th:href="@{'/customer'(page=${customers.number + 1},nameSearch=${nameSearch},email=${email},customerType=${customerType})}"-->
-<!--               th:if="${customers.hasNext()}">-->
-<!--                <button type="button" class="btn btn-secondary">Next</button>-->
-<!--            </a>-->
-<!--            <th:block th:if="${message}">-->
-<!--                <p style="text-align: center" th:text="${message}"></p>-->
-<!--            </th:block>-->
-<!--        </div>-->
+        <!--        <div class="modal fade " id="delete" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"-->
+        <!--             style="color: white">-->
+        <!--            <div class="modal-dialog ">-->
+        <!--                <div class="modal-content bg-dark">-->
+        <!--                    <div class="modal-header">-->
+        <!--                        <h5 class="modal-title" id="exampleModalLabel">Delete</h5>-->
+        <!--                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
+        <!--                    </div>-->
+        <!--                    <div class="modal-body">-->
+        <!--                        Bạn có muốn xóa <strong class="text-danger" id="nameDelete"></strong>-->
+        <!--                    </div>-->
+        <!--                    <div class="modal-footer">-->
+        <!--                        <form action="/customers/delete">-->
+        <!--                            <input type="text" name="id" id="id" hidden>-->
+        <!--                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>-->
+        <!--                            <button class="btn btn-danger" type="submit">Delete</button>-->
+        <!--                        </form>-->
+        <!--                    </div>-->
+        <!--                </div>-->
+        <!--            </div>-->
+        <!--        </div>-->
+        <!--        <div style="text-align: center">-->
+        <!--            <a th:href="@{'/customers'(page=${customers.number - 1},nameSearch=${nameSearch},email=${email},customerType=${customerType})}"-->
+        <!--               th:if="${customers.hasPrevious()}">-->
+        <!--                <button type="button" class="btn btn-secondary">Previous</button>-->
+        <!--            </a>-->
+        <!--            <span th:text="${customers.number+1}"></span> / <span th:text="${customers.totalPages}"></span>-->
+        <!--            <a th:href="@{'/customers'(page=${customers.number + 1},nameSearch=${nameSearch},email=${email},customerType=${customerType})}"-->
+        <!--               th:if="${customers.hasNext()}">-->
+        <!--                <button type="button" class="btn btn-secondary">Next</button>-->
+        <!--            </a>-->
+        <!--            <th:block th:if="${message}">-->
+        <!--                <p style="text-align: center" th:text="${message}"></p>-->
+        <!--            </th:block>-->
+        <!--        </div>-->
         <div style="text-align: center">
-
+            <a th:href="@{'/customer'(page=${customerList.number - 1},searchName=${searchName})}"
+               th:if="${customerList.hasPrevious()}">
+                <button type="button" class="btn btn-secondary">Previous</button>
+            </a>
+            <span th:text="${customerList.number+1}"></span> / <span th:text="${customerList.totalPages}"></span>
+            <a th:href="@{'/customer'(page=${customerList.number + 1},searchName=${searchName})}"
+               th:if="${customerList.hasNext()}">
+                <button type="button" class="btn btn-secondary">Next</button>
+            </a>
+            <th:block th:if="${message}">
+                <p style="text-align: center" th:text="${message}"></p>
+            </th:block>
         </div>
+
+
     </div>
+
+</div>
 </div>
 </body>
 </html>
