--- a/module_4/bai_tap/src/main/java/case_study/case_study/src/main/resources/templates/home.html
+++ b/module_4/bai_tap/src/main/java/case_study/case_study/src/main/resources/templates/home.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Page Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
     <title></title>
     <link rel="stylesheet" href="/file_css/index.css">
     <link rel="stylesheet" href="/file_css/reset.css">
@@ -21,8 +25,9 @@
                 <div class="d-flex">
                     <img src="./images/map.svg" alt="" class="me-5"/>
                     <div class="d-flex flex-column">
-                        <p class="mb-3">103 - 105 Vo Nguyen Giap Street, Khue My Ward, Ngu Hanh Son District, Danang City, Vietnam</p>
-                        <p class="fs-4"><span class="fs-4">7,0 km from Danang Airport</span> </p>
+                        <p class="mb-3">103 - 105 Vo Nguyen Giap Street, Khue My Ward, Ngu Hanh Son District, Danang
+                            City, Vietnam</p>
+                        <p class="fs-4"><span class="fs-4">7,0 km from Danang Airport</span></p>
                     </div>
                 </div>
             </div>
@@ -49,7 +54,8 @@
                 <a href="/employees">Employee</a>
 
             </li>
-            <li class="list__item d-flex justify-content-center align-items-center"><a href="/customer">Customer</a></li>
+            <li class="list__item d-flex justify-content-center align-items-center"><a href="/customer">Customer</a>
+            </li>
             <li class="list__item d-flex justify-content-center align-items-center"><a href="/facility">Service</a>
             </li>
             <li class="list__item d-flex justify-content-center align-items-center"><a href="#">Contract</a></li>
@@ -57,50 +63,65 @@
     </div>
 </section>
 
-<div class="container-fluid" >
+<div class="container-fluid">
     <div class="row">
-        <div class="col-3"  >
-            <div class="d-flex flex-column flex-shrink-0 p-3 " style="width: 375px;height: 100%; background: #046056; margin-left: -8px ">
+        <div class="col-3">
+            <div class="d-flex flex-column flex-shrink-0 p-3 "
+                 style="width: 375px;height: 100%; background: #046056; margin-left: -8px ">
                 <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-                    <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+                    <svg class="bi me-2" width="40" height="32">
+                        <use xlink:href="#bootstrap"></use>
+                    </svg>
                     <span class="fs-4">Sidebar</span>
                 </a>
                 <hr>
-                <ul class="nav nav-pills flex-column mb-auto "style="font-size: 17px !important;">
+                <ul class="nav nav-pills flex-column mb-auto " style="font-size: 17px !important;">
                     <li class="nav-item">
                         <a href="#" class="nav-link active" aria-current="page" style="font-size: 17px !important;">
-                            <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"></use></svg>
+                            <svg class="bi me-2" width="16" height="16">
+                                <use xlink:href="#home"></use>
+                            </svg>
                             Home
                         </a>
                     </li>
                     <li>
-                        <a href="/employees?action=list" class="nav-link link-success"style="font-size: 17px !important;">
-                            <svg class="bi me-2" width="16" height="16" ><use xlink:href="#speedometer2"></use></svg>
+                        <a href="/employees?action=list" class="nav-link link-success"
+                           style="font-size: 17px !important;">
+                            <svg class="bi me-2" width="16" height="16">
+                                <use xlink:href="#speedometer2"></use>
+                            </svg>
                             Employee
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link link-primary"style="font-size: 17px !important;">
-                            <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
+                        <a href="#" class="nav-link link-primary" style="font-size: 17px !important;">
+                            <svg class="bi me-2" width="16" height="16">
+                                <use xlink:href="#table"></use>
+                            </svg>
                             Customer
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link link-dark"style="font-size: 17px !important;">
-                            <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"></use></svg>
+                        <a href="#" class="nav-link link-dark" style="font-size: 17px !important;">
+                            <svg class="bi me-2" width="16" height="16">
+                                <use xlink:href="#grid"></use>
+                            </svg>
                             Service
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link link-light"style="font-size: 17px !important;">
-                            <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
+                        <a href="#" class="nav-link link-light" style="font-size: 17px !important;">
+                            <svg class="bi me-2" width="16" height="16">
+                                <use xlink:href="#people-circle"></use>
+                            </svg>
                             Contract
                         </a>
                     </li>
                 </ul>
                 <hr>
                 <div class="dropdown">
-                    <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle"
+                       id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
                         <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
                         <strong>mdo</strong>
                     </a>
@@ -108,13 +129,15 @@
                         <li><a class="dropdown-item" href="#">New project...</a></li>
                         <li><a class="dropdown-item" href="#">Settings</a></li>
                         <li><a class="dropdown-item" href="#">Profile</a></li>
-                        <li><hr class="dropdown-divider"></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
                         <li><a class="dropdown-item" href="#">Sign out</a></li>
                     </ul>
                 </div>
             </div>
         </div>
-        <div class="col-9" >
+        <div class="col-9">
             <img src="images/background_furama.jpeg" style="width: 100%; height: 100%;">
         </div>
     </div>
