--- a/module_4/bai_tap/src/main/java/case_study/case_study/src/main/resources/templates/customer/list.html
+++ b/module_4/bai_tap/src/main/java/case_study/case_study/src/main/resources/templates/customer/list.html
@@ -5,9 +5,7 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
+
 </head>
 <body>
 <div style="text-align: center">
@@ -16,16 +14,12 @@
     </th:block>
 </div>
 <div>
-    <form>
-        <input type="text" name="searchName "  th:value="${searchName}" placeholder="Search name">
-        <!--        <select name="customerType">-->
-        <!--            <option value="" selected>Type</option>-->
-        <!--            <option th:each="item: ${customerTypes}" th:value="${item.name}"-->
-        <!--                    th:text="${item.name}"></option>-->
-        <!--        </select>-->
+    <form action="/customer">
+        <input type="text" name="searchName "  placeholder="Search name">
         <input type="submit" value="Search">
     </form>
-    <p><a href="/add">Add Customer</a></p>
+    <button><a href="/add">Add Customer</a></button>
+
 </div>
 <div class="body-mid">
     <div class="body-mid-right">
@@ -56,7 +50,7 @@
                 <td th:text="${data.phoneNumber}"></td>
                 <td th:text="${data.email}"></td>
                 <td th:text="${data.address}"></td>
-                <td></td>
+                <td><a class="btn btn-danger" th:href="@{/customer/edit/__${data.id}__}">Edit</a></td>
                 <td></td>
 
             </tr>
@@ -118,4 +112,7 @@
 </div>
 </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </html>
