--- a/module_4/bai_tap/src/main/java/case_study/case_study/src/main/resources/templates/home.html
+++ b/module_4/bai_tap/src/main/java/case_study/case_study/src/main/resources/templates/home.html
@@ -102,11 +102,11 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link link-dark" style="font-size: 17px !important;">
+                        <a href="/facilities" class="nav-link link-dark" style="font-size: 17px !important;">
                             <svg class="bi me-2" width="16" height="16">
                                 <use xlink:href="#grid"></use>
                             </svg>
-                            Service
+                            Facility
                         </a>
                     </li>
                     <li>
