--- a/module_4/bai_tap/src/main/java/case_study/case_study/src/main/resources/templates/home.html
+++ b/module_4/bai_tap/src/main/java/case_study/case_study/src/main/resources/templates/home.html
@@ -94,7 +94,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link link-primary" style="font-size: 17px !important;">
+                        <a href="/customer" class="nav-link link-primary" style="font-size: 17px !important;">
                             <svg class="bi me-2" width="16" height="16">
                                 <use xlink:href="#table"></use>
                             </svg>
@@ -110,7 +110,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link link-light" style="font-size: 17px !important;">
+                        <a href="/contracts" class="nav-link link-light" style="font-size: 17px !important;">
                             <svg class="bi me-2" width="16" height="16">
                                 <use xlink:href="#people-circle"></use>
                             </svg>
