--- a/module_4/bai_tap/src/main/java/case_study/case_study/src/main/resources/templates/contract/list.html
+++ b/module_4/bai_tap/src/main/java/case_study/case_study/src/main/resources/templates/contract/list.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg py-0 my-2">
+    <div class="container-fluid">
+        <button class="btn btn-primary btn-outline-secondary btn-sm" data-bs-toggle="modal"
+                data-bs-target="#addContract">
+            <span class="fa-solid fa-plus text-light h6 my-auto me-1"></span>
+            <span class="text-light"> Add New Contract</span>
+        </button>
+    </div>
+</nav>
 <table class="table table-light table-striped table-bordered">
     <tr class="table-dark text-light">
         <th class="text-center"><i class="fa-sharp fa-solid fa-bolt"></i></th>
@@ -47,6 +56,7 @@
 
 
 </table>
+
 <nav aria-label="..." class="justify-content-center d-flex">
     <ul class="pagination">
         <li class="page-item">
@@ -79,6 +89,94 @@
         </li>
     </ul>
 </nav>
+
+<div class="modal fade" id="addContract"  tabindex="-1" aria-labelledby="exampleModalLabel1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form class="border border-2 border-success p-3 rounded formCSS" th:action="@{/contracts/add}"
+                  th:object="${contractDto}" method="post">
+                <div class="modal-header">
+                    <h3 class="modal-title fw-bold text-primary" id="exampleModalLabel3">THÊM MỚI HỢP ĐỒNG</h3>
+                    <button id="closeModal" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+
+                <div class="modal-body">
+                    <div class="form-group">
+                        <div class="form-group">
+                            <label class="h6" for="facility">Name Facility:</label>
+                            <div class="input-group">
+                                <select id="facility" class="form-select" th:field="*{facility}">
+                                    <option value=""></option>
+                                    <option th:each="item : ${facilityList}" th:value="${item.id}"
+                                            th:text="${item.name}"
+                                    ></option>
+                                </select>
+                                <p style="color: red" th:errors="*{facility}" th:if="${#fields.hasErrors('facility')}"></p>
+                                <input hidden id="checkFacilty" type="text" th:if="${#fields.hasErrors('facility')}" value="facility">
+                            </div>
+                        </div>
+
+                        <div class="mt-3 form-group">
+                            <label class="h6" for="employee">Name Employee:</label>
+                            <div class="input-group">
+                                <select id="employee" class="form-control" th:field="*{employee}">
+                                    <option value="0"></option>
+                                    <option th:each="item : ${employeeList}" th:value="${item.id}"
+                                            th:text="${item.name}" >
+                                    </option>
+                                </select>
+                                <span  style="color: red" th:errors="*{employee}" th:if="${#fields.hasErrors('employee')}"></span>
+                                <input hidden id="checkEmployee" type="text" th:if="${#fields.hasErrors('employee')}" value="employee">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="h6" for="customer">Name Customer:</label>
+                            <div class="input-group">
+                                <select id="customer" class="form-control" th:field="*{customer}">
+                                    <option value="0"></option>
+                                    <option th:each="item : ${customerList}" th:value="${item.id}"
+                                            th:text="${item.name}"></option>
+                                </select>
+                                <span  style="color: red" th:errors="*{customer}" th:if="${#fields.hasErrors('customer')}"></span>
+                                <input hidden id="checkCustomer" type="text" th:if="${#fields.hasErrors('customer')}" value="customer">
+                            </div>
+                        </div>
+
+                        <div class="mt-3 form-group">
+                            <label for="startDate" class="h6">Day Start:</label>
+                            <input type="date" id="startDate" class="form-control" th:field="*{startDate}">
+                            <span  style="color: red" th:errors="*{startDate}" th:if="${#fields.hasErrors('startDate')}"></span>
+                            <input hidden id="checkStartDay" type="text" th:if="${#fields.hasErrors('startDate')}" value="startday">
+                        </div>
+
+                        <div class="mt-3 form-group" id="endDateForm" >
+                            <label for="endDate" class="h6">End Day:</label>
+                            <input type="date" id="endDate" class="form-control" th:field="*{endDate}">
+                            <span style="color: red" th:errors="*{endDate}" th:if="${#fields.hasErrors('endDate')}"></span>
+                            <input hidden id="checkEndDay" type="text" th:if="${#fields.hasErrors('endDate')}" value="endday">
+                        </div>
+
+                        <div class="mt-3 form-group">
+                            <label for="deposit" class="h6">Deposit(VNĐ):</label>
+                            <div class="input-group">
+                                <input type="number" id="deposit" class="form-control"
+                                       placeholder="Nhập tiền đặt cọc..." th:field="*{deposit}">
+                                <span style="color: red" th:errors="*{deposit}" th:if="${#fields.hasErrors('deposit')}"></span>
+                                <input hidden id="checkDeposit" type="text" th:if="${#fields.hasErrors('deposit')}" value="deposit">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+                        <button type="submit" class="btn btn-success" value="delete">Lưu</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 </body>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
@@ -87,20 +185,23 @@
 </script>
 <script>
 
-    $(document).ready(function(){
-        // $('#addContract').modal({backdrop: 'static', keyboard: false})
-        // $('#addContractdetail').modal({backdrop: 'static', keyboard: false})
-        let checkStartDay = $('#checkStartDay').val();
-        let checkEndDay = $('#checkEndDay').val();
-        let checkFacilty = $('#checkFacilty').val();
-        let chechEmployee = $('#chechEmployee').val();
-        let checkCustomer = $('#checkCustomer').val();
-        let checkDeposit = $('#checkDeposit').val();
-        let checkQuantity = $('#checkQuantity').val();
-        if(checkStartDay === "startday" || checkEndDay === "endday"|| checkFacilty==="facility"||chechEmployee==="employee"||checkCustomer==="customer"||checkDeposit==="deposit") {
-            $('#addContract').modal('show');
-        }
-        if(checkQuantity==="quantity"){
-            $('#addContractdetail').modal('show');
-        }
+    $(document).ready(function() {
+            // $('#addContract').modal({backdrop: 'static', keyboard: false})
+            // $('#addContractdetail').modal({backdrop: 'static', keyboard: false})
+            let checkStartDay = $('#checkStartDay').val();
+            let checkEndDay = $('#checkEndDay').val();
+            let checkFacilty = $('#checkFacilty').val();
+            let chechEmployee = $('#chechEmployee').val();
+            let checkCustomer = $('#checkCustomer').val();
+            let checkDeposit = $('#checkDeposit').val();
+            let checkQuantity = $('#checkQuantity').val();
+            if (checkStartDay === "startday" || checkEndDay === "endday" || checkFacilty === "facility" || chechEmployee === "employee" || checkCustomer === "customer" || checkDeposit === "deposit") {
+                $('#addContract').modal('show');
+            }
+            if (checkQuantity === "quantity") {
+                $('#addContractdetail').modal('show');
+            }
+    });
+    </script>
+
 </html>
